[gd_scene load_steps=3 format=3 uid="uid://ch7v8xu360sps"]

[ext_resource type="Script" path="res://Scenes/PipeGame.gd" id="1_28bhg"]
[ext_resource type="Texture2D" uid="uid://d0jvajvxs84ok" path="res://area_for_buttons_blue.png" id="2_xccjj"]

[node name="PipeGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28bhg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xccjj")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.057
anchor_right = 0.5
anchor_bottom = 0.102
offset_left = -270.0
offset_right = 270.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Remerber order: 0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(286, 423)
size_flags_vertical = 3
theme_override_constants/separation = -17
alignment = 1

[node name="RememberTimer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="timeout" from="RememberTimer" to="." method="_on_remember_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
